// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`ok 1`] = `
{
  "items": [],
  "loc": 0,
  "type": "list",
}
`;

exports[`ok 2`] = `
{
  "items": [
    {
      "loc": 1,
      "text": "1",
      "type": "id",
    },
    {
      "loc": 3,
      "text": "2",
      "type": "id",
    },
    {
      "loc": 5,
      "text": "3",
      "type": "id",
    },
  ],
  "loc": 0,
  "type": "list",
}
`;

exports[`ok 3`] = `
{
  "items": [
    {
      "loc": 1,
      "text": "hi",
      "type": "id",
    },
    {
      "first": "folks",
      "loc": 4,
      "tag": {
        "loc": -1,
        "text": "",
        "type": "id",
      },
      "templates": [],
      "type": "string",
    },
  ],
  "loc": 0,
  "type": "list",
}
`;

exports[`ok 4`] = `
{
  "first": "things",
  "loc": 4,
  "tag": {
    "loc": 0,
    "text": "what",
    "type": "id",
  },
  "templates": [],
  "type": "string",
}
`;

exports[`ok 5`] = `
{
  "items": [
    {
      "loc": 1,
      "text": "hi",
      "type": "id",
    },
    {
      "first": "folks",
      "loc": 4,
      "tag": {
        "loc": -1,
        "text": "",
        "type": "id",
      },
      "templates": [],
      "type": "string",
    },
    {
      "loc": 12,
      "text": "and",
      "type": "id",
    },
    {
      "first": "such",
      "loc": 16,
      "tag": {
        "loc": -1,
        "text": "",
        "type": "id",
      },
      "templates": [
        {
          "expr": {
            "loc": 23,
            "text": "is",
            "type": "id",
          },
          "loc": 25,
          "suffix": "life",
        },
      ],
      "type": "string",
    },
  ],
  "loc": 0,
  "type": "list",
}
`;

exports[`ok 6`] = `
{
  "items": [
    {
      "first": 
"a
b"
,
      "loc": 1,
      "tag": {
        "loc": -1,
        "text": "",
        "type": "id",
      },
      "templates": [],
      "type": "string",
    },
    {
      "first": "a\nb",
      "loc": 7,
      "tag": {
        "loc": -1,
        "text": "",
        "type": "id",
      },
      "templates": [],
      "type": "string",
    },
    {
      "first": "a\\nb",
      "loc": 14,
      "tag": {
        "loc": -1,
        "text": "",
        "type": "id",
      },
      "templates": [],
      "type": "string",
    },
  ],
  "loc": 0,
  "type": "array",
}
`;
